# stockscanner

./: .env.example  .gitignore  CLAUDE.md  INITIAL.md  PLANNING.md  README.md  README_SCANNER.md  TASK.md  config.yaml  pyproject.toml  requirements.txt  test_scan.py
PRPs/: ib-stock-scanner.md
data/: scanner.db
examples/: README.md  advanced_display.py  backtesting_framework.py  basic_scanner.py  demo_scanner.py  ml_breakout_predictor.py  pattern_detection.py  requirements.txt  run_examples.py  sentiment_integration.py  test_ib_connection.py
examples/config/: model_config.yaml  scanner_config.yaml
examples/utils/: __init__.py  data_manager.py  indicators.py  patterns.py
ib_stock_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: main.py
src/alerts/: display.py
src/config/: constants.py  settings.py
src/data/: cache_manager.py  database.py  models.py  validators.py
src/scanner/: criteria.py  data_processor.py  ib_connection.py  models.py  scanner.py
